--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-DISCORD_BOT_TOKEN=MTQ0MjU1NzIzMjcwODU4MzUwNA.G5BUPE.DLgaFHnkQcMM4aRHtzlrquTW0paZ8T5Cdgwq6k
+DISCORD_BOT_TOKEN=MTQ0MjU1NzIzMjcwODU4MzUwNA.GotlVg.rjjlKWtW_Ws0tyQk4mjhNoOAsREIRAd-BzW26o
